After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 732714 - avidemux, wavparse: Print invalid fourcc in hex
avidemux, wavparse: Print invalid fourcc in hex
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other All
: Normal minor
: 1.3.91
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-07-04 02:10 UTC by Sebastian Rasmussen
Modified: 2014-07-04 08:22 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Proposed patch. (1.57 KB, patch)
2014-07-04 02:11 UTC, Sebastian Rasmussen
committed Details | Review

Description Sebastian Rasmussen 2014-07-04 02:10:14 UTC
Inspired by the bugs I found in https://bugzilla.gnome.org/show_bug.cgi?id=732697 I looked for further omissions and found them in avidemux and wavparse.
Comment 1 Sebastian Rasmussen 2014-07-04 02:11:11 UTC
Created attachment 279871 [details] [review]
Proposed patch.
Comment 2 Tim-Philipp Müller 2014-07-04 08:22:02 UTC
commit d33d8cf026d203812d64180450adcb9fd314fdf2
Author: Sebastian Rasmussen <sebras@hotmail.com>
Date:   Fri Jul 4 03:21:30 2014 +0200

    avidemux, wavparse: Print invalid fourcc in hex
    
    Previously this was printed as characters which caused later processing
    of the error message to sometimes warn about non-UTF-8 characters.
    
    Fixes https://bugzilla.gnome.org/show_bug.cgi?id=732714